RESOLVED FIXED276289
[Writing Tools] Rare WebContent crash in IPC::ArgumentCoder<WebKit::CoreIPCData, void>::encode
https://bugs.webkit.org/show_bug.cgi?id=276289
Summary [Writing Tools] Rare WebContent crash in IPC::ArgumentCoder<WebKit::CoreIPCDa...
Richard Robinson
Reported 2024-07-06 11:11:00 PDT
Attachments
Richard Robinson
Comment 1 2024-07-06 11:39:27 PDT
EWS
Comment 2 2024-07-06 14:37:32 PDT
Committed 280714@main (ff3ae8f473dd): <https://commits.webkit.org/280714@main> Reviewed commits have been landed. Closing PR #30545 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.